--- a/h/browser/chrome/help/permissions.html
+++ b/h/browser/chrome/help/permissions.html
@@ -1,20 +1,84 @@
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>How to enable local file access for Hypothes.is</title>
+    <style>
+      html {
+        font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
+        padding: 40px 20px;
+      }
+
+      img {
+        display: block;
+        max-width: 100%;
+        margin: 1em 0;
+      }
+
+      .help-container {
+        width: 640px;
+        margin: auto;
+        line-height: 1.5;
+      }
+
+      .help-container__heading {
+        text-align: center;
+        font-size: 1em;
+        font-weight: 800;
+        font-weight: 500;
+        margin-top: 2em;
+        margin-bottom: 1em;
+      }
+
+      .help-container__icon {
+        display: block;
+        width: 99px;
+        margin: auto;
+      }
+
+      .help-container__image {
+        outline: 1px solid #CCC;
+      }
+
+      .help-container__note {
+        color: #969696;
+        font-style: italic;
+        font-size: 0.85em;
+        -webkit-font-smoothing: antialiased;
+      }
+
+      .help-container ol {
+        list-style-type: none;
+        padding: 0;
+        margin: 1em 0;
+      }
+
+      .help-container li {
+        position: relative;
+          margin-top: 1.5em;
+      }
+    </style>
   </head>
   <body>
-    <h2>Access denied</h2>
-    <p>Maybe you are trying to access a local document, using the file:/// protocol, but forgot to grant the required permissions to the Hypothes.is extension?</p>
-    <p>If that's the case, here is how to allow the Hypothes.is extension to access file URLs:</p>
-    <ol>
-      <li>
-	Go to <b>chrome://extensions</b> (Sorry, we can't make this clickable; you will need to type or copy this.)
-      </li>
-      <li>
-	Check this checkbox called "Allow access to file URLs", as shown here: <br/>
-	<img src="permission.png" />
-      </li>
-    </ol>
-  <p>That still won't make local HTML documents useable (for now), but at least local PDF documents can be annotated this way.</p>
+    <article class="help-container">
+      <img class="help-container__icon" src="sad-annotation.svg" />
+      <h1 class="help-container__heading">We’re sorry, Hypothes.is couldn’t open that file…</h1>
+      <p>If it’s a local PDF document that you’ve opened from your computer
+        you’ll need to change your settings to allow us to access these files.
+      </p>
+      <p>You can do this from the extensions menu, using the following steps…</p>
+      <ol class="stepped-list">
+        <li class="stepped-list__item">
+          <strong>Step One:</strong>
+          Open the Extensions Settings page via <em>Settings&nbsp;&gt;&nbsp;Extensions</em>.
+          <img class="help-container__image" src="step-1.png" />
+        </li>
+        <li class="stepped-list__item">
+          <strong>Step Two:</strong>
+          Check the “Allow access to file URLs” checkbox under the Hypothesis&nbsp;extension.
+          <img class="help-container__image" src="step-2.png" />
+        </li>
+      </ol>
+      <p class="help-container__note">Please note, we currently only support the editing of local PDF files.</p>
+    </article>
   </body>
 </html>
