Add help section for accessing Chrome pages

--- a/h/browser/chrome/help/index.html
+++ b/h/browser/chrome/help/index.html
@@ -93,6 +93,11 @@
         <h1 class="help-item__heading">We’re sorry, Hypothes.is couldn’t open that file…</h1>
         <p class="center">This extension can’t be used on local HTML documents at the moment. PDF’s will work fine though.</p>
       </section>
+      <section id="restricted-protocol" class="help-item">
+        <img class="help-item__icon" src="sad-annotation.svg" />
+        <h1 class="help-item__heading">We’re sorry, Hypothes.is doesn’t work on this page…</h1>
+        <p class="center">This extension can’t be used on internal Chrome pages like this one.</p>
+      </section>
     </article>
   </body>
 </html>
