--- a/h/browser/chrome/help/index.html
+++ b/h/browser/chrome/help/index.html
@@ -91,7 +91,7 @@
       <section id="local-file" class="help-item">
         <img class="help-item__icon" src="sad-annotation.svg" />
         <h1 class="help-item__heading">We’re sorry, Hypothes.is couldn’t open that file…</h1>
-        <p class="center">This extension can’t be used on local HTML documents at the moment. PDF’s will work fine though.</p>
+        <p class="center">This extension can’t be used on local HTML documents at the moment.</p>
       </section>
       <section id="restricted-protocol" class="help-item">
         <img class="help-item__icon" src="sad-annotation.svg" />
