Provide help for Windows and Linux users

--- a/h/browser/chrome/help/index.html
+++ b/h/browser/chrome/help/index.html
@@ -78,7 +78,10 @@
         <ol class="stepped-list">
           <li class="stepped-list__item">
             <strong>Step One:</strong>
-            Open the Extensions Settings page via <em>Settings&nbsp;&gt;&nbsp;Extensions</em>.
+            Open the Extensions Settings page via
+              <em data-extension-path="mac">Window&nbsp;&gt;&nbsp;Extensions</em>
+              <em data-extension-path="win">Chrome Menu Icon&nbsp;&gt;&nbsp;Settings&nbsp;&gt;&nbsp;Extensions</em>
+              <em data-extension-path="linux">Tools&nbsp;&gt;&nbsp;Extensions</em>
             <img class="help-item__image" src="step-1.png" />
           </li>
           <li class="stepped-list__item">
@@ -99,5 +102,6 @@
         <p class="center">This extension can’t be used on internal Chrome pages like this one.</p>
       </section>
     </article>
+    <script src="./index.js"></script>
   </body>
 </html>
