Update the Restricted Protocol help text

--- a/h/browser/chrome/help/index.html
+++ b/h/browser/chrome/help/index.html
@@ -99,7 +99,7 @@
       <section id="restricted-protocol" class="help-item">
         <img class="help-item__icon" src="sad-annotation.svg" />
         <h1 class="help-item__heading">We’re sorry, Hypothes.is doesn’t work on this page…</h1>
-        <p class="center">This extension can’t be used on internal Chrome pages like this one.</p>
+        <p class="center">This extension can only be used on pages served over HTTP/HTTPS and FTP.</p>
       </section>
     </article>
     <script src="./index.js"></script>
