Standardise on "Hypothesis" for the name of the software
As discussed, we're going to use Hypothesis in textual references to our
software.

I haven't changed instances of "Hypothes.is" where they refer to the
legal entity.

--- a/h/browser/chrome/help/index.html
+++ b/h/browser/chrome/help/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Hypothes.is Help</title>
+    <title>Hypothesis Help</title>
     <style>
       body {
         font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
@@ -70,7 +70,7 @@
     <article class="help-container">
       <section id="no-file-access" class="help-item">
         <img class="help-item__icon" src="sad-annotation.svg" />
-        <h1 class="help-item__heading">We’re sorry, Hypothes.is couldn’t open that file…</h1>
+        <h1 class="help-item__heading">We’re sorry, Hypothesis couldn’t open that file…</h1>
         <p>If it’s a local PDF document that you’ve opened from your computer
           you’ll need to change your settings to allow us to access these files.
         </p>
@@ -93,12 +93,12 @@
       </section>
       <section id="local-file" class="help-item">
         <img class="help-item__icon" src="sad-annotation.svg" />
-        <h1 class="help-item__heading">We’re sorry, Hypothes.is couldn’t open that file…</h1>
+        <h1 class="help-item__heading">We’re sorry, Hypothesis couldn’t open that file…</h1>
         <p class="center">This extension can’t be used on local HTML documents at the moment.</p>
       </section>
       <section id="restricted-protocol" class="help-item">
         <img class="help-item__icon" src="sad-annotation.svg" />
-        <h1 class="help-item__heading">We’re sorry, Hypothes.is doesn’t work on this page…</h1>
+        <h1 class="help-item__heading">We’re sorry, Hypothesis doesn’t work on this page…</h1>
         <p class="center">This extension can only be used on pages served over HTTP/HTTPS and FTP.</p>
       </section>
     </article>
