PDF.js: re-add our 2-liner viewer customizations

--- a/h/browser/chrome/content/web/viewer.html
+++ b/h/browser/chrome/content/web/viewer.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <!--
 Copyright 2012 Mozilla Foundation
 
@@ -40,6 +40,8 @@ http://sourceforge.net/adobe/cmap/wiki/License/
 
     <script src="debugger.js"></script>
     <script src="viewer.js"></script>
+    <script src="../../public/config.js"></script>
+    <script src="../../public/embed.js"></script>
 
   </head>
 
