--- a/h/browser/chrome/help/index.html
+++ b/h/browser/chrome/help/index.html
@@ -101,6 +101,10 @@
         <h1 class="help-item__heading">We’re sorry, Hypothesis doesn’t work on this page…</h1>
         <p class="center">This extension can only be used on pages served over HTTP/HTTPS and FTP.</p>
       </section>
+      <section id="blocked-site" class="help-item">
+        <img class="help-item__icon" src="sad-annotation.svg" />
+        <h1 class="help-item__heading">We’re sorry, Hypothesis doesn't work on this site yet.</h1>
+      </section>
     </article>
     <script src="./index.js"></script>
   </body>
