Improve explanation when activating H on pages served by an extension
The better solution will be to try and extract the original
URL from the 'chrome-extension://' URL in the case where the user
has a custom viewer installed.

That will not always be possible however, so try to provide
a better explanation of the extension's limitations.

--- a/h/browser/chrome/help/index.html
+++ b/h/browser/chrome/help/index.html
@@ -99,7 +99,14 @@
       <section id="restricted-protocol" class="help-item">
         <img class="help-item__icon" src="sad-annotation.svg" />
         <h1 class="help-item__heading">We’re sorry, Hypothesis doesn’t work on this page…</h1>
-        <p class="center">This extension can only be used on pages served over HTTP/HTTPS and FTP.</p>
+        <p class="center">
+          This extension can only be used on pages served over HTTP/HTTPS and FTP.
+        </p>
+        <p class="center">
+          If you have a Chrome extension installed that provides a custom viewer
+          for PDFs or other file types, that may prevent them from being annotated
+          with Hypothesis.
+        </p>
       </section>
       <section id="blocked-site" class="help-item">
         <img class="help-item__icon" src="sad-annotation.svg" />
